--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
         <h1>This is a Header</h1>
         <p>This is a paragraph v2</p>
+        <p>This is a third paragraph</p>
     </body>
 </html>
